Integração com a biometria Hamster DX